--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "node-fetch": "^3.3.2",
     "ws": "^8.16.0",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "@anthropic-ai/sdk": "^0.20.0"
   },
   "devDependencies": {
     "vercel": "^32.5.0"
