--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "ws": "^8.16.0",
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "@anthropic-ai/sdk": "^0.20.0"
+    "@anthropic-ai/sdk": "^0.20.0",
+    "archiver": "^6.0.0",
+    "axios": "^1.6.0",
+    "form-data": "^4.0.0",
+    "compression": "^1.7.4"
   },
   "devDependencies": {
     "vercel": "^32.5.0"
