--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "claude-multi-agent-system",
   "version": "1.0.0",
   "description": "Multi-agent coordination system for Claude agents using MCP",
+  "main": "app.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
-    "dev": "vercel dev",
-    "deploy": "vercel --prod",
-    "test": "node test-agent.js",
-    "start": "node websocket-server.js",
-    "railway": "node websocket-server.js"
+    "dev": "node app.js",
+    "start": "node app.js",
+    "test": "node test-agent.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.50.2",
