--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "claude-multi-agent-system",
   "version": "1.0.0",
   "description": "Multi-agent coordination system for Claude agents using MCP",
-  "main": "ade-server.js",
+  "main": "ade-server-apml.js",
   "engines": {
     "node": ">=18.0.0"
   },
   "scripts": {
-    "start": "node ade-server.js",
-    "dev": "node ade-server.js",
-    "test": "echo 'No tests yet'"
+    "start": "node ade-server-apml.js",
+    "dev": "node ade-server-apml.js",
+    "test": "echo 'No tests yet'",
+    "start-json": "node ade-server.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.50.2",
