--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "start-json": "node ade-server.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.50.2",
-    "node-fetch": "^3.3.2",
-    "ws": "^8.16.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "@anthropic-ai/sdk": "^0.20.0",
+    "@modelcontextprotocol/sdk": "^1.15.0",
+    "@supabase/supabase-js": "^2.50.2",
     "archiver": "^6.0.0",
     "axios": "^1.6.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "form-data": "^4.0.0",
-    "compression": "^1.7.4"
+    "node-fetch": "^3.3.2",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "vercel": "^32.5.0"
